0.4.0:
- Feature: Bookmarks and history now use Android stock bookmarks and history database. Your old bookmarks have been saved to your SD card. Go to "Preferences/Manage bookmarks and history" and import file "auto-export.xml" if you want to retrieve them.
- Feature: Zirco can now retrieve your bookmarks from Firefox Sync. Go to "Preferences/Firefox bookmarks" synchronization to start using it! 
- Add "Share" context menu to bookmarks and history view. 
- New design for start page.
- Remove completed download from download list.
- Notification for completed downloads are removed when clicking on it.

0.3.9:
- Bug fix in history view. Items are now displayed in differents categories (today, last week, last month...)
- Add a button to the left of the url bar (where was the "Home" button) allowing to choose between differents actions (share, select text...)

0.3.8:
- Switching between tabs can now be made in two ways, either the previous fling gesture method, or by using dedicated buttons which are displayed and hidden along with toolbars. The method is customizable in UI preferences. Default is to use he new buttons.
- Much better pinch zoom support.
- New options allowing to display or not the application title bar.
- Bugfixes.

0.3.7:
- Chinese translation.
- Add Share page, Share link, Share image and Share email options.
- Toolbars are now shown and hidden with a quick animation.

0.3.6:
- Volume keys behaviour can be customized to either zoom, switch tabs, navigate in history, or have default behaviour (e.g. change volume). Default is to change volume.
- Plugins management bugfixes.
- Favicon size in now normalized, based on screen density.
- Movable to SD Card.

0.3.5:
- Websites can be displayed in a "fake" mobile view, provided by Google GWT; This can be done on-demand, or automatically through in list of websites in preferences;
- Plugins support;
- Untrusted SSL certificates support;

0.3.4: